fixed cmake incompatibly issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ include(GNUInstallDirs)
 set(CMAKE_CXX_STANDARD 17)
 #set(DCMAKE_TOOLCHAIN_FILE "C:/Users/EinSpaten/Documents/vcpkg/scripts/buildsystems/vcpkg.cmake")
 
-include_directories("C:/Program Files (x86)/spdlog/include/")
-set(spdlog_DIR "C:/Program Files (x86)/spdlog/lib/cmake") # spdlog installed directory ("lib/spdlog/spdlogConfig.cmake" exists in this direcotry).
+#include_directories("C:/Program Files (x86)/spdlog/include/")
+#set(spdlog_DIR "C:/Program Files (x86)/spdlog/lib/cmake") # spdlog installed directory ("lib/spdlog/spdlogConfig.cmake" exists in this direcotry).
 find_package(spdlog CONFIG REQUIRED)
 #target_link_libraries(main PRIVATE spdlog::spdlog spdlog::spdlog_header_only)
 
@@ -33,14 +33,35 @@ add_library(RoboSimulator_LIB STATIC
 
 # Add source to this project's executable.
 #add_executable (RoboSimulator main.cpp)
-add_executable (Client client_main.cpp)
-add_executable (Server server_main.cpp)
+add_executable (Client src/client_main.cpp)
+add_executable (Server src/server_main.cpp)
 
+
+
+if (WIN32)
 target_link_libraries(RoboSimulator_LIB Ws2_64.lib)
-target_link_libraries(RoboSimulator_LIB "C:/Program Files (x86)/spdlog/lib/spdlog.lib")
+endif(WIN32)
+
+if(UNIX)
+    target_link_libraries(Server stdc++fs pthread)
+    target_link_libraries(Client stdc++fs pthread)
+endif(UNIX)
+
+
+target_link_libraries(RoboSimulator_LIB spdlog)
+
 
 target_link_libraries(Client RoboSimulator_LIB)
 target_link_libraries(Server RoboSimulator_LIB)
+
+if(MSVC)
+    add_compile_options(/W4 /WX)
+else()
+    add_compile_options(-Wall -Wextra -pedantric -Werror)
+endif()
+
+
+
 
 
 # TODO: Add tests and install targets if needed.
